tests/snapshots/snapshots_states__command_with_history.snap
---
source: tests/snapshots_states.rs
expression: s
---
1   ┏Artists━━━━━━━━━━━━━━━┓┌Albums────────────────────┐┌Tracks────────────────────────────────────────────────────────┐
2   ┃40mP                  ┃│Cosmic                    ││▶  1 Song1 — Cosmic                                24bit-96kHz│
3   ┃DECO*27               ┃│                          ││                                                              │
4   ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────┘└──────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  MODE local · CONT off
:sync_
