tests/snapshots/snapshots_states__confirmation_playlist_picker.snap
---
source: tests/snapshots_states.rs
expression: s
---
VIEWS                      │┏Artists━━━━━━━━━━━━━━━┓┌Albums────────────────────┐┌Tracks────────────────────────────────┐
›   1 Artists              │┃▸ 40mP                ┃│Cosmic                    ││▶  1 Song1 — 40mP          24bit-96kHz│
›   2 Playlists            │┃  DECO*27             ┃│                          ││                                      │
›   3 Queue                │┃                      ┃│                          ││                                      │
›   4 YouTube              │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
DISCOVER                   │┃ ┌ add "Song1 — 40mP" to playlist · Enter confirm ──────────┐                             │
♫   H Home                 │┃ │+ new playlist...                                         │                             │
✦   S Discover             │┃ │                                                          │                             │
◎ :radio Radio             │┗━│                                                          │─────────────────────────────┘
──────────────────────────────│                                                          │──────────────────────────────
╭─ NOW PLAYING ───────────────│                                                          │─────────────────────────────╮
│Song1                        │                                                          │                             │
│40mP                         │                                                          │                             │
│Cosmic                       │                                                          │                             │
│LOCAL · 24-bit · 96 kHz      │                                                          │                             │
│▶ PLAYING  [Space] Pause     │                                                          │                             │
│0:00  ───────────────────────└──────────────────────────────────────────────────────────┘                             │
│[←] Previous   [Space] Pause   [→] Next   Vol 70% ▰▰▰▰▰▰▰▱▱▱                                                          │
│LOCAL                                                                                                                 │
│Shuffle: Off   Repeat: Off   Continue: Off                                                                            │
│Up next: Nothing queued                                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
VIEW: local · SOURCE: local [Y —]
