tests/snapshots/snapshots_states__lyrics_available.snap
---
source: tests/snapshots_states.rs
expression: s
---


            ┌ Lyrics — embedded (synced) ──────────────────────────────────────────────────────────────────┐
            │ ▸ [0:00] First line                                                                          │
            │ [0:05] Second line                                                                           │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                    Esc close · j/k scroll                                    │
            └──────────────────────────────────────────────────────────────────────────────────────────────┘


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  MODE local · CONT off
VIEW: local · SOURCE: local
