tests/snapshots/snapshots_states__lyrics_loading.snap
---
source: tests/snapshots_states.rs
expression: s
---


            ┌ Lyrics — loading… ───────────────────────────────────────────────────────────────────────────┐
            │ Loading lyrics…                                                                              │
            │                                                                                              │
            │ (reading from local tags / sidecar / youtube)                                                │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                    Esc close · j/k scroll                                    │
            └──────────────────────────────────────────────────────────────────────────────────────────────┘


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  PREF local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local [Y —]
