tests/snapshots/snapshots_states__lyrics_unavailable.snap
---
source: tests/snapshots_states.rs
assertion_line: 98
expression: s
---


            ┌ Lyrics — not found ──────────────────────────────────────────────────────────────────────────┐
            │ Lyrics are searched on YouTube; local tracks without a YouTube match have no lyrics.         │
            │                                                                                              │
            │ R retry lyrics for this track  ·  L or Esc close                                             │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                    Esc close · j/k scroll                                    │
            └──────────────────────────────────────────────────────────────────────────────────────────────┘


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  MODE local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local [Y —]
