tests/snapshots/snapshots_states__offline_cache.snap
---
source: tests/snapshots_states.rs
expression: s
---
1  │┏YouTube [stale]━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2  │┃♫ Liked Music         ┃│▸  1 Loading…                                                                           YT│
3  │┃♫ Chill               ┃│   2 Loading…                                                                           YT│
4  │┃✦ Mood: Focus         ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
   │┌Suggested / Up Next───────────────────────────────────────────────────────────────────────────────────────────────┐
   ││▶ Mood: Focus →                                                                                                   │
   │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  MODE local · YT~ · CONT off · SHUF off · RPT off
VIEW: youtube · SOURCE: local [Y err] · [stale] YT: offline — showing cached (press R to retry)
