tests/snapshots/snapshots_states__provider_failure.snap
---
source: tests/snapshots_states.rs
expression: s
---
1   ┏YouTube [err]━━━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2   ┃                      ┃│                                                                                          │
3   ┃                      ┃│  [err] YouTube unavailable                                                               │
4   ┃                      ┃│  provider error — press R to retry                                                       │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│  R retry · 1 local                                                                       │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  MODE local · YT! · CONT off · SHUF off · RPT off
VIEW: youtube · SOURCE: local [Y err] · [!] [err] YT: provider error — press R to retry
