tests/snapshots/snapshots_states__queue_empty.snap
---
source: tests/snapshots_states.rs
assertion_line: 98
expression: s
---
VIEWS                      │┏Queue━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
›   1 Artists              │┃                                     ≡ Queue is empty                                     ┃
›   2 Playlists            │┃                               Press e on a track to enqueue                              ┃
›   3 Queue                │┃                               1 Artists · / search · ? help                              ┃
›   4 YouTube              │┃                                                                                          ┃
────────────────────────   │┃                                                                                          ┃
DISCOVER                   │┃                                                                                          ┃
♫   H Home                 │┃                                                                                          ┃
✦   S Discover             │┃                                                                                          ┃
◎ :radio Radio             │┃                                                                                          ┃
◆ :gen Generator           │┃                                                                                          ┃
────────────────────────   │┃                                                                                          ┃
TOOLS                      │┃                                                                                          ┃
/   / Search               │┃                                                                                          ┃
!   D Diagnostics          │┃                                                                                          ┃
?   ? Help                 │┃                                                                                          ┃
                           │┃                                                                                          ┃
                           │┃                                                                                          ┃
                           │┃                                                                                          ┃
                           │┃                                                                                          ┃
                           │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[PLAYING] ▶ Song1 — 40mP  0:00 / 3:00  ▸ Next: (end)  24bit/96  MODE local · CONT off · SHUF off · RPT off
VIEW: queue · SOURCE: local [Y —]
